[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pepy"
dynamic = ["version", "readme"]
description = "Python bindings for pe-parse"
authors = [
    {name = "Wesley Shields", email = "wxs@atarininja.org"}
]
license = "BSD-2-Clause"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C++",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/trailofbits/pe-parse"
Repository = "https://github.com/trailofbits/pe-parse"

[tool.setuptools]
# pepy is a C extension module, not a Python package
# No Python packages to discover - only the compiled extension from setup.py
packages = []

[tool.setuptools.dynamic]
version = {file = "VERSION"}
readme = {file = "pepy/README.md", content-type = "text/markdown"}
